# alphascope

./: .gitignore  README.md  pyproject.toml
.github/workflows/: autonomous_loop.yml
alpha_archive/: __init__.py  cli.py  db.py  fixtures.py  fixtures_openap.py  ingest.py  triage.py
alpha_archive/agent/: __init__.py  actor_self_edit.py  critic.py  learn_aggregator.py  loop.py
alpha_archive/backtest/: __init__.py  runner.py
alpha_archive/community/: scraper.py  screening.py
alpha_archive/data/: __init__.py
alpha_archive/extract/: __init__.py  codegen.py  pdf.py  sandbox.py  spec.py
alpha_archive/fixtures_impl/: __init__.py  adversarial_random.py  momentum_jt1993.py
alpha_archive/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  offline_provider.py
alpha_archive/meta/: __init__.py  calibration.py
alpha_archive/sources/: aqr.py  arxiv.py  nber.py  ssrn.py  two_sigma.py
alphascope/: __init__.py  cli.py  db.py  fixtures.py  fixtures_openap.py  ingest.py  replicate.py  triage.py
alphascope/backtest/: dsr.py  ic_report.py
alphascope/community/: __init__.py  bipartisan.py  reputation.py  scraper.py  screening.py
alphascope/data/: prices.py
alphascope/extract/: codegen.py  pdf.py  sandbox.py  spec.py
docs/: architecture.md  demo_run.md  go-to-market.md  meta_learning.md  methodology.md  roadmap.md
examples/: run_meta_loop.py
meta/: README.md  actor.md  community.md  critique.md  learn.md  north_star.md
scripts/: audit_qfin_universe_coverage.py  audit_sharadar_coverage.py  audit_sharadar_known_papers.py
tests/: test_smoke.py
(+20 files in other folders)
