[project]
name = "alpha-archive"
version = "0.1.0"
description = "Automated paper-to-backtest replication engine for quantitative finance signals."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Reza Soleymanifar", email = "reza@soleymanifar.com"}]
license = {text = "MIT"}
keywords = ["quantitative-finance", "backtest", "alpha", "factor-research", "llm"]

dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "yfinance>=0.2.40",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
alpha-archive = "alpha_archive.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alpha_archive"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
